--- a/Web/Restaurant.Web/Restaurant.Web.csproj
+++ b/Web/Restaurant.Web/Restaurant.Web.csproj
@@ -36,4 +36,10 @@
     <ProjectReference Include="..\Restaurant.Web.Infrastructure\Restaurant.Web.Infrastructure.csproj" />
     <ProjectReference Include="..\Restaurant.Web.ViewModels\Restaurant.Web.ViewModels.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="wwwroot\img\favicon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
