--- a/Web/Restaurant.Web/appsettings.json
+++ b/Web/Restaurant.Web/appsettings.json
@@ -1,6 +1,7 @@
-﻿{
+{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Restaurant;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=Restaurant;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "RestaurantWebContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Restaurant.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
