Improved menu UI.

--- a/Web/Restaurant.Web/appsettings.json
+++ b/Web/Restaurant.Web/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FacebookLogin": {
+    "AppId": "3087955271425039",
+    "AppSecret": "02f3d194a5a56d69a3b47d57440e9cd8"
+  }
 }
