Added address functionality + architecture changes
Added new project for service layer DTO and removed the Web dependency.

--- a/Services/Restaurant.Services.Data/Restaurant.Services.Data.csproj
+++ b/Services/Restaurant.Services.Data/Restaurant.Services.Data.csproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Data\Restaurant.Data.Common\Restaurant.Data.Common.csproj" />
     <ProjectReference Include="..\..\Data\Restaurant.Data.Models\Restaurant.Data.Models.csproj" />
-    <ProjectReference Include="..\..\Web\Restaurant.Web.ViewModels\Restaurant.Web.ViewModels.csproj" />
+    <ProjectReference Include="..\..\Restaurant.Services.Models\Restaurant.Services.Models.csproj" />
     <ProjectReference Include="..\Restaurant.Services.Mapping\Restaurant.Services.Mapping.csproj" />
   </ItemGroup>
 
