--- a/Web/Restaurant.Web.Infrastructure/Restaurant.Web.Infrastructure.csproj
+++ b/Web/Restaurant.Web.Infrastructure/Restaurant.Web.Infrastructure.csproj
@@ -18,4 +18,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Services\Restaurant.Services.Data\Restaurant.Services.Data.csproj" />
+  </ItemGroup>
+
 </Project>
