Added administration for Reviews

--- a/Web/Restaurant.Web.ViewModels/Restaurant.Web.ViewModels.csproj
+++ b/Web/Restaurant.Web.ViewModels/Restaurant.Web.ViewModels.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\Restaurant.Web.Infrastructure\Restaurant.Web.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Administration\Dashboard\" />
+  </ItemGroup>
+
 </Project>
