Added Checkout functionality, started working on orders.
Added Checkout controller and view, dynamic order address selection.

--- a/Web/Restaurant.Web.ViewModels/Restaurant.Web.ViewModels.csproj
+++ b/Web/Restaurant.Web.ViewModels/Restaurant.Web.ViewModels.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <Folder Include="Administration\Dashboard\" />
+    <Folder Include="Order\" />
   </ItemGroup>
 
 </Project>
