Added tests for Review,Reservation and Table services

--- a/Tests/Restaurant.Services.Data.Tests/Restaurant.Services.Data.Tests.csproj
+++ b/Tests/Restaurant.Services.Data.Tests/Restaurant.Services.Data.Tests.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Data\Restaurant.Data\Restaurant.Data.csproj" />
     <ProjectReference Include="..\..\Services\Restaurant.Services.Data\Restaurant.Services.Data.csproj" />
+    <ProjectReference Include="..\..\Web\Restaurant.Web.ViewModels\Restaurant.Web.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
