Added sendgrid API Key+ small UI changed

--- a/Web/Restaurant.Web/appsettings.json
+++ b/Web/Restaurant.Web/appsettings.json
@@ -13,5 +13,8 @@
   "FacebookLogin": {
     "AppId": "3087955271425039",
     "AppSecret": "02f3d194a5a56d69a3b47d57440e9cd8"
+  },
+  "SendGrid": {
+    "ApiKey": ""
   }
 }
