Updated contact form to create user message entity

--- a/Web/Restaurant.Web/appsettings.json
+++ b/Web/Restaurant.Web/appsettings.json
@@ -15,6 +15,6 @@
     "AppSecret": "02f3d194a5a56d69a3b47d57440e9cd8"
   },
   "SendGrid": {
-    "ApiKey": ""
+    "ApiKey": "Add api key here"
   }
 }
