--- a/Tests/Restaurant.Web.Infrastructure.Tests/Restaurant.Web.Infrastructure.Tests.csproj
+++ b/Tests/Restaurant.Web.Infrastructure.Tests/Restaurant.Web.Infrastructure.Tests.csproj
@@ -11,7 +11,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <Content Include="..\stylecop.json" Link="stylecop.json" />
+    <AdditionalFiles Include="..\..\stylecop.json" Link="stylecop.json" />
 	</ItemGroup>
 	
   <ItemGroup>
@@ -33,11 +33,11 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
-
+	
   <ItemGroup>
-    <ProjectReference Include="..\Services\Restaurant.Services.Data\Restaurant.Services.Data.csproj" />
-    <ProjectReference Include="..\Web\Restaurant.Web.Infrastructure\Restaurant.Web.Infrastructure.csproj" />
-    <ProjectReference Include="..\Web\Restaurant.Web.ViewModels\Restaurant.Web.ViewModels.csproj" />
+    <ProjectReference Include="..\..\Services\Restaurant.Services.Data\Restaurant.Services.Data.csproj" />
+    <ProjectReference Include="..\..\Web\Restaurant.Web.Infrastructure\Restaurant.Web.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\Web\Restaurant.Web.ViewModels\Restaurant.Web.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
