Adding new project - AdminDashboard.Web
Adding boilerplate code for the new project AdminDashboard along with basic configuration.
Adding a new InitialCreate migraiton for the AdminDashboard database.

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,7 @@ Web/Restaurant.Web/wwwroot/lib/jquery/dist/jquery.js
 Web/Restaurant.Web/wwwroot/lib/jquery-validation/dist/jquery.validate.min.js
 Web/Restaurant.Web/wwwroot/lib/jquery-validation/dist/jquery.validate.js
 Web/Restaurant.Web/wwwroot/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js
+/Web/AdminDashboard/AdminDashboard.Web/wwwroot/lib/jquery/dist/jquery.js
+/Web/AdminDashboard/AdminDashboard.Web/wwwroot/lib/jquery-validation/dist/jquery.validate.js
+/Web/AdminDashboard/AdminDashboard.Web/wwwroot/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js
+/Web/AdminDashboard/AdminDashboard.Web/wwwroot/css/site.css
