Moving administration logic to the AdminDashboard module
Adding new controllers and views to the AdminDashboard module with the existing logic from the Administration area of Restaurant.Web.

Refactoring the OrderNumberValidation attribute and its tests to account for the change in administration logic.

Adding a new configuration - WebRootPath - the path to the wwwroot folder of Restaurant.Web project, to the appsettings.json file of the AdminDashboard as a temporary solution to adding meal images through the new module.

--- a/Web/AdminDashboard/AdminDashboard.Web/appsettings.json
+++ b/Web/AdminDashboard/AdminDashboard.Web/appsettings.json
@@ -12,5 +12,6 @@
   "AllowedHosts": "*",
   "SendGrid": {
     "ApiKey": "Add api key here"
-  }
+  },
+  "WebRootPath": "X:\\GIT\\Restaurant\\Web\\Restaurant.Web\\wwwroot\\images"
 }
