Update to .net 8
Updating all projects to .net8 and all nuget packages to the latest version.

--- a/Data/AdminDashboard.Data/appsettings.json
+++ b/Data/AdminDashboard.Data/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=AdminDashboard;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=AdminDashboard;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
   }
 }
