--- a/Data/Restaurant.Data/appsettings.json
+++ b/Data/Restaurant.Data/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Restaurant;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=Restaurant;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
   }
 }
