--- a/Web/AdminDashboard/AdminDashboard.Web/appsettings.json
+++ b/Web/AdminDashboard/AdminDashboard.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "RestaurantConnection": "Server=.;Database=Restaurant;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "AdminDashboardConnection": "Server=.;Database=AdminDashboard;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "RestaurantConnection": "Server=.;Database=Restaurant;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False",
+    "AdminDashboardConnection": "Server=.;Database=AdminDashboard;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
